--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(fill.OptSpace)
 export(fill.SVDimpute)
 export(fill.SVT)
 export(fill.SoftImpute)
+export(fill.USVT)
 export(fill.nuclear)
 export(fill.simple)
 import(CVXR)
@@ -19,4 +20,5 @@ importFrom(stats,lm)
 importFrom(stats,median)
 importFrom(stats,rbinom)
 importFrom(stats,rnorm)
+importFrom(utils,packageVersion)
 useDynLib(filling)
